[XQLuaViewDemo] Luaview 第二阶段学习，扩展的 demo 功能：
    1、添加本地下载服务器脚本Zip包，并且解压，运行；
    2、实现脚本下载脚本并运行脚本的功能。

Signed-off-by: laixuefei <laixuefei@g7.com.cn>

--- a/XQLuaViewDemo/Info.plist
+++ b/XQLuaViewDemo/Info.plist
@@ -24,9 +24,21 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>172.22.110.156</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 			<key>g.alicdn.com</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+			<key>172.22.110.156</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
@@ -44,8 +56,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
